Refactor: made changes to receipt manager Added: Custom sandwiches